--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/css/font-awesome.css">
 
-    <title>Agência XYZ</title>
+    <title>Lemon's Midia</title>
 
 </head>
 
@@ -24,7 +24,7 @@
     <header class="header">
         <div class="header-container">
             <a href="/">
-                <h1 class="logo">Agência XYZ</h1>
+                <h1 class="logo">Lemon's Midia</h1>
             </a>
 
             <nav>
@@ -45,11 +45,32 @@
         </div>    
     </header>
 
+    <!--Banner topo-->
     <section class="hero">
-        
+        <h2>We make cool things</h2>        
     </section>
 
+    <!--Saiba mais-->
     <section class="about">
+        <div class="item">
+            <h3>Title</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eum maiores ipsum rem minus cumque voluptas
+            laborum dolorum iure aperiam possimus vero numquam saepe deserunt, reprehenderit hic aliquam dignissimos
+            quisquam.</p>
+            <a href="" class="btn-know-more">Saiba mais</a>
+        </div>
+
+        <div class="image right"></div>
+        <div class="image left"></div>
+
+        <div class="item">
+            <h3>Title</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eum maiores ipsum rem minus cumque voluptas
+            laborum dolorum iure aperiam possimus vero numquam saepe deserunt, reprehenderit hic aliquam dignissimos
+            quisquam.</p>
+            <a href="" class="btn-know-more">Saiba mais</a>
+        </div>
+
     </section>
 
     <section class="services">
